--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     <script src="build/js/metro.js"></script>
     <!--<script src="docs/js/docs.js"></script>-->
     <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+    <script src="build/js/react.js"></script>
+    <script src="build/js/react-dom.js"></script>
+
+    <script type="text/babel" src="build/js/jsx/app.jsx"></script>
+
     <style>
         html,
         body {
