Создана страница для вкладки БД 2GIS

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                 <div class="cell size-x200" id="cell-sidebar" style="background-color: #0072c6; height: 100%">
                     <ul class="sidebar navy">
                         <li>
-                            <a href="#">
+                            <a href="DB2GIS.html">
                                 <span class="mif-database icon"></span>
                                 <span class="title">БД 2Гис</span>
                                 <span class="counter">0</span>
@@ -446,7 +446,7 @@
                             </a>
                         </li>
                         <li class="active">
-                            <a href="#">
+                            <a href="index.html">
                                 <span class="mif-database icon"></span>
                                 <span class="title">БД Физ лиц</span>
                                 <span class="counter">0</span>
@@ -474,27 +474,27 @@
                                 <span class="icon mif-cross bg-darkCobalt fg-lighterBlue"></span>
                             </button>
 
-                            <table class="dataTable border hovered bordered" data-role="datatable" data-auto-width="false">
-                                <thead>
+                            <table class="dataTable text-small border hovered bordered" data-role="datatable" data-auto-width="false">
+                                <thead >
                                     <tr>
-                                        <th></th>
-                                        <th>№</th>
-                                        <th>Название города</th>
-                                        <th>сотовый/стационарный</th>
-                                        <th>Количество</th>
+                                        <th  style="width:15px;"></th>
+                                        <th  style="width:15px;">№</th>
+                                        <th  style="width:25px;" >Название города</th>
+                                        <th  style="width:20px;">сотовый/стационарный</th>
+                                        <th  style="width:15px;">Количество</th>
                                         <th>Проекты</th>
-                                        <th>Дата создания</th>
+                                        <th  style="width:15px;">Дата создания</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
+                                    <tr >
                                         <td>
                                             <label class="input-control checkbox small-check no-margin">
                                             <input type="checkbox">
                                             <span class="check"></span>
                                         </td>
                                         <td>1</td>
-                                        <td>Челябинск</td>
+                                        <td >Челябинск</td>
                                         <td>сотовый/стационарный</td>
                                         <td>10113</td>
                                         <td>Интерсвязь, СМАРТ, РБТ</td>
