Создал страничку для Проектов
Создал страничку для Проектов. Не получилось сделать нормальную вёрстку
для 2й и 3й колонки

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="Projects.html">
                                 <span class="mif-event-available icon"></span>
                                 <span class="title">Проекты</span>
                                 <span class="counter">0</span>
